samples/_failures_safe/1761070536_5d2b93_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d69deff2.c: In function ‘main’:
./samples/SAFE/__tmp_d69deff2.c:162:28: error: missing terminating " character
  162 |                     printf("Error
      |                            ^~~~~~
./samples/SAFE/__tmp_d69deff2.c:162:21: error: expected expression at end of input
  162 |                     printf("Error
      |                     ^~~~~~
./samples/SAFE/__tmp_d69deff2.c:162:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d69deff2.c:162:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d69deff2.c:162:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d69deff2.c:162:21: error: expected declaration or statement at end of input
